# Muninn

./: .gitignore  Cargo.toml  Dockerfile  README.md  WIKI_MANUAL.md
.agent/skills/code-analysis-fixing/: SKILL.md
.agent/skills/github-issue-watching/: SKILL.md
.agent/skills/rust-axum-service/: SKILL.md
docs/iso_29110/: SI_01_Implementation_Report.md
docs/iso_29110/pm/: PM_01_Project_Plan.md  PM_02_01_Sprint1_Report.md  PM_02_02_Sprint2_Report.md
scripts/: e2e_test.sh
src/: config.rs  db.rs  health.rs  llm.rs  main.rs  mcp.rs  models.rs
src/code_agent/: gemini_cli.rs  mod.rs  opencode.rs  runner.rs
src/fixer/: analyzer.rs  mod.rs  pr_creator.rs
src/watcher/: api.rs  mod.rs  poller.rs
static/: index.html
